@@ -8,7 +8,6 @@ import org.xipki.ca.api.profile.CertprofileFactory;
 import org.xipki.util.exception.ObjectCreationException;
 
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 
 /**
@@ -21,7 +20,7 @@ import java.util.Set;
 public class CertprofileFactoryImpl implements CertprofileFactory {
 
   private static final String TYPE = "xijson";
-  private static final Set<String> types = Collections.unmodifiableSet(new HashSet<>(Collections.singletonList(TYPE)));
+  private static final Set<String> types = Set.copyOf(Collections.singletonList(TYPE));
 
   @Override
   public Set<String> getSupportedTypes() {
